--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "MUSA 550"
-email:
-description: "Geospatial Data Science in Python"
+title: "Toolkit for a Green New Deal"
+authors: "Asha Bazil and Kristin Chang"
+description: "MUSA 550 Fall 2021 Final Project"
 twitter_username:
 github_username:
 minimal_mistakes_skin: default
